Functional database integrated

--- a/client/src/locales/en/login.json
+++ b/client/src/locales/en/login.json
@@ -1,8 +1,27 @@
 {
-    "top-description": "Login eller opret en konto",
-    "email": "E-mail",
-    "divider-text": "eller",
-    "continue-with-google": "Fortsæt med Google",
-    "continue-with-facebook": "Fortsæt med Facebook",
-    "continue-with-apple": "Fortsæt med Apple"
+    "top-description": "Login or create an account",
+    "email-placeholder": "Enter your email address",
+    "continue-button-text": "Continue",
+    "or": "or",
+    "continue-facebook": "Continue with Facebook",
+    "continue-apple": "Continue with Apple",
+    "continue-google": "Continue with Google",
+    "checking": "Checking...",
+    "password": "Password",
+    "password-placeholder": "Enter your password",
+    "change-email": "Change email",
+    "sign-in": "Sign In",
+    "signing-in": "Signing in...",
+    "first-name": "First Name",
+    "first-name-placeholder": "Enter your first name",
+    "last-name": "Last Name",
+    "last-name-placeholder": "Enter your last name",
+    "password-requirements": "Password must be at least 8 characters long",
+    "create-account": "Create Account",
+    "creating-account": "Creating account...",
+    "social-account-exists": "An account with this email already exists with social login. Please use the social login buttons below.",
+    "email-check-error": "Failed to check email. Please try again.",
+    "login-error": "Failed to sign in. Please check your credentials.",
+    "register-error": "Failed to create account. Please try again.",
+    "social-login-not-configured": "Social login is not configured yet. Please use email/password login."
 }
