--- a/client/src/locales/da/login.json
+++ b/client/src/locales/da/login.json
@@ -1,10 +1,27 @@
 {
     "top-description": "Login eller opret en konto",
-    "email": "E-mail",
     "email-placeholder": "Indtast din e-mail",
     "continue-button-text": "Fortsæt",
-    "divider-text": "eller",
-    "continue-google": "Fortsæt med Google",
+    "or": "eller",
     "continue-facebook": "Fortsæt med Facebook",
-    "continue-apple": "Fortsæt med Apple"
+    "continue-apple": "Fortsæt med Apple",
+    "continue-google": "Fortsæt med Google",
+    "checking": "Kontrollerer...",
+    "password": "Adgangskode",
+    "password-placeholder": "Indtast din adgangskode",
+    "change-email": "Skift e-mail",
+    "sign-in": "Log ind",
+    "signing-in": "Logger ind...",
+    "first-name": "Fornavn",
+    "first-name-placeholder": "Indtast dit fornavn",
+    "last-name": "Efternavn",
+    "last-name-placeholder": "Indtast dit efternavn",
+    "password-requirements": "Adgangskoden skal være mindst 8 tegn lang",
+    "create-account": "Opret konto",
+    "creating-account": "Opretter konto...",
+    "social-account-exists": "En konto med denne e-mail eksisterer allerede med social login. Brug venligst social login-knapperne nedenfor.",
+    "email-check-error": "Kunne ikke kontrollere e-mail. Prøv igen.",
+    "login-error": "Kunne ikke logge ind. Kontroller venligst dine loginoplysninger.",
+    "register-error": "Kunne ikke oprette konto. Prøv igen.",
+    "social-login-not-configured": "Social login er ikke konfigureret endnu. Brug venligst e-mail/adgangskode login."
 }
