Begin seperate login / signup

--- a/client/src/locales/da/signup.json
+++ b/client/src/locales/da/signup.json
@@ -1,17 +1,17 @@
 {
-    "top-description": "Login eller opret en konto",
+    "top-description": "Opret en konto",
     "email-placeholder": "Indtast din e-mail",
-    "continue-button-text": "Fortsæt",
+    "signin-button-text": "Opret",
     "or": "eller",
-    "continue-facebook": "Fortsæt med Facebook",
-    "continue-apple": "Fortsæt med Apple",
-    "continue-google": "Fortsæt med Google",
+    "signin-facebook": "Opret med Facebook",
+    "signin-apple": "Opret med Apple",
+    "signin-google": "Opret med Google",
     "checking": "Kontrollerer...",
     "password": "Adgangskode",
     "password-placeholder": "Indtast din adgangskode",
     "change-email": "Skift e-mail",
     "sign-in": "Log ind",
-    "signing-in": "Logger ind...",
+    "signupg-in": "Logger ind...",
     "first-name": "Fornavn",
     "first-name-placeholder": "Indtast dit fornavn",
     "last-name": "Efternavn",
@@ -19,9 +19,9 @@
     "password-requirements": "Adgangskoden skal være mindst 8 tegn lang",
     "create-account": "Opret konto",
     "creating-account": "Opretter konto...",
-    "social-account-exists": "En konto med denne e-mail eksisterer allerede med social login. Brug venligst social login-knapperne nedenfor.",
+    "social-account-exists": "En konto med denne e-mail eksisterer allerede med social sign up. Brug venligst social sign up-knapperne nedenfor.",
     "email-check-error": "Kunne ikke kontrollere e-mail. Prøv igen.",
-    "login-error": "Kunne ikke logge ind. Kontroller venligst dine loginoplysninger.",
+    "sign up-error": "Kunne ikke logge ind. Kontroller venligst dine sign upoplysninger.",
     "register-error": "Kunne ikke oprette konto. Prøv igen.",
-    "social-login-not-configured": "Social login er ikke konfigureret endnu. Brug venligst e-mail/adgangskode login."
+    "social-sign up-not-configured": "Social sign up er ikke konfigureret endnu. Brug venligst e-mail/adgangskode sign up."
 }
