--- a/client/src/locales/da/signup.json
+++ b/client/src/locales/da/signup.json
@@ -12,10 +12,9 @@
     "change-email": "Skift e-mail",
     "sign-in": "Log ind",
     "signupg-in": "Logger ind...",
-    "first-name": "Fornavn",
-    "first-name-placeholder": "Indtast dit fornavn",
-    "last-name": "Efternavn",
-    "last-name-placeholder": "Indtast dit efternavn",
+    "already-have-account": "Har du allerede en konto?",
+    "username": "Brugernavn",
+    "username-placeholder": "Indtast dit brugernavn",
     "password-requirements": "Adgangskoden skal være mindst 8 tegn lang",
     "create-account": "Opret konto",
     "creating-account": "Opretter konto...",
