--- a/client/src/locales/en/signup.json
+++ b/client/src/locales/en/signup.json
@@ -12,6 +12,8 @@
     "change-email": "Change email",
     "sign-in": "Sign In",
     "signing-in": "Signing in...",
+    "username": "username",
+    "username-placeholder": "type your username",
     "first-name": "First Name",
     "first-name-placeholder": "Enter your first name",
     "last-name": "Last Name",
