Fully working profile page

--- a/client/src/locales/da/header.json
+++ b/client/src/locales/da/header.json
@@ -1,4 +1,7 @@
 {
     "login": "Log ind",
-    "signup": "Opret konto"
+    "signup": "Opret konto",
+    "profile": "Profil",
+    "settings": "Indstillinger", 
+    "logout": "Log ud"
 }
