--- a/client/src/locales/en/header.json
+++ b/client/src/locales/en/header.json
@@ -1,4 +1,7 @@
 {
     "login": "Log in",
-    "signup": "Sign up"
+    "signup": "Sign up",
+    "profile": "Profile",
+    "settings": "Settings",
+    "logout": "Logout"
 }
