--- a/client/src/locales/en/profile.json
+++ b/client/src/locales/en/profile.json
@@ -1,17 +1,8 @@
 {
-  "account_info": "Account Information",
-  "username": "Username",
-  "email": "Email",
-  "user_id": "User ID",
-  "preferences": "Preferences",
-  "theme": "Theme",
-  "language": "Language",
-  "timezone": "Timezone",
-  "light": "Light",
-  "dark": "Dark",
-  "auto": "Auto",
-  "save_preferences": "Save Preferences",
-  "logout": "Logout",
-  "preferences_updated": "Preferences updated successfully!",
-  "update_error": "Failed to update preferences"
+  "tab1-title": "Account",
+  "tab2-title": "Friends",
+  "tab3-title": "Settings",
+
+  "settings-title": "Settings",
+  "settings-description": "Customize your account settings here."
 }
