Delete account button

--- a/client/src/locales/da/profile.json
+++ b/client/src/locales/da/profile.json
@@ -29,5 +29,7 @@
   "language-label": "Sprog",
   "language-description": "Vælg dit foretrukne sprog",
   "language-english": "Engelsk",
-  "language-danish": "Dansk"
+  "language-danish": "Dansk",
+
+  "delete-account-button-text": "Slet konto"
 }
