Live register errors on signup page

--- a/client/src/locales/da/signup.json
+++ b/client/src/locales/da/signup.json
@@ -11,18 +11,24 @@
     "password-placeholder": "Indtast din adgangskode",
     "change-email": "Skift e-mail",
     "sign-in": "Log ind",
-    "signupg-in": "Logger ind...",
+    "signing-in": "Logger ind...",
     "already-have-account": "Har du allerede en konto?",
-    "invalid-email": "Ugyldig e-mail",
-    "email-already-exists": "En konto med denne e-mail eksisterer allerede. Prøv at logge ind istedet.",
     "username": "Brugernavn",
     "username-placeholder": "Indtast dit brugernavn",
     "password-requirements": "Adgangskoden skal være mindst 8 tegn lang",
     "create-account": "Opret konto",
     "creating-account": "Opretter konto...",
-    "social-account-exists": "En konto med denne e-mail eksisterer allerede med social sign up. Brug venligst social sign up-knapperne nedenfor.",
     "email-check-error": "Kunne ikke kontrollere e-mail. Prøv igen.",
-    "sign up-error": "Kunne ikke logge ind. Kontroller venligst dine sign upoplysninger.",
+    "login-error": "Kunne ikke logge ind. Kontroller venligst dine loginoplysninger.",
     "register-error": "Kunne ikke oprette konto. Prøv igen.",
-    "social-sign up-not-configured": "Social sign up er ikke konfigureret endnu. Brug venligst e-mail/adgangskode sign up."
+    "social-login-not-configured": "Social login er ikke konfigureret endnu. Brug venligst e-mail/adgangskode login.",
+    "social-account-exists": "En konto med denne e-mail eksisterer allerede med social login. Brug venligst social login-knapperne nedenfor.",
+
+    "_comment_field_errors": "=== FELT VALIDERINGSFEJL ===",
+    "email-invalid": "Indtast venligst en gyldig e-mailadresse",
+    "email-exists": "Denne e-mail er allerede registreret.",
+    "email-exists-signin": "Log ind i stedet",
+    "username-too-short": "Brugernavn skal være mindst 3 tegn langt",
+    "username-invalid-chars": "Brugernavn kan kun indeholde bogstaver, tal og understreger",
+    "password-too-weak": "Adgangskode skal indeholde mindst 8 tegn, inklusive store og små bogstaver samt tal"
 }
