Updated to 10% height and removed colors

--- a/client/src/locales/da/spellingBee.json
+++ b/client/src/locales/da/spellingBee.json
@@ -1,3 +1,11 @@
-    {
-        
-    }
+{
+    "rank-lebel-beginer": "Begynder",
+    "rank-lebel-good-start": "God start",
+    "rank-lebel-moving-up": "Bevæger sig opad",
+    "rank-lebel-good": "God",
+    "rank-lebel-solid": "Solid",
+    "rank-lebel-nice": "Flot",
+    "rank-lebel-great": "Imponerende",
+    "rank-lebel-amazing": "Fantastisk",
+    "rank-lebel-queen-bee": "Dronningebie"
+}
