--- a/client/src/locales/en/spellingBee.json
+++ b/client/src/locales/en/spellingBee.json
@@ -1,3 +1,11 @@
 {
-    
+    "rank-lebel-beginer": "Beginner",
+    "rank-lebel-good-start": "Good Start",
+    "rank-lebel-moving-up": "Moving Up",
+    "rank-lebel-good": "Good",
+    "rank-lebel-solid": "Solid",
+    "rank-lebel-nice": "Nice",
+    "rank-lebel-great": "Great",
+    "rank-lebel-amazing": "Amazing",
+    "rank-lebel-queen-bee": "Queen Bee"
 }
