--- a/client/src/locales/en/spellingBee.json
+++ b/client/src/locales/en/spellingBee.json
@@ -7,5 +7,14 @@
     "rank-lebel-nice": "Nice",
     "rank-lebel-great": "Great",
     "rank-lebel-amazing": "Amazing",
-    "rank-lebel-queen-bee": "Queen Bee"
+    "rank-lebel-queen-bee": "Queen Bee",
+
+    "_comment": "modal variables:",
+    "modal-title": "Rankings",
+    "modal-description": "Ranks are based on a percentage of possible points in a puzzle.",
+    "modal-rank-header": "Rank",
+    "modal-minimum-score-header": "Minimum score",
+    "modal-points-to-next": "{{points}} points to {{nextRank}}",
+    "modal-points-to-genius": "{{points}} to Queen Bee",
+    "modal-max-rank-achieved": "Maximum rank achieved!"
 }
